build(example): increase memory available for gradle example build
it was throwing OutOfMemory error without this